--- a/index.html
+++ b/index.html
@@ -3,10 +3,33 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="style.css">
         <title>Rock paper scissors</title>
         <script rel="text/javascript" src="script.js"></script>
     </head>
     <body>
-        
+        <div class="game">
+            <div class="scores">
+                <p class="player-score">Your score: 0</p>
+                <p class="computer-score">Computer score: 0</p>
+            </div>
+            <div class="informations">
+                <h1>Welcome to Rock Paper Scissors!</h1>
+            </div>
+            <div class="choices">
+                <div class="player">
+                    <p class="player-choice">scissors</p>
+                </div>
+                <div class="separator"></div>
+                <div class="computer">
+                    <p class="computer-choice">scissors</p>
+                </div>
+            </div>
+            <div class="buttons">
+                <button class="rock">Rock</button>
+                <button class="paper">Paper</button>
+                <button class="scissors">Scissors</button>
+            </div>
+        </div>
     </body>
 </html>
