--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="style.css">
         <title>Rock paper scissors</title>
-        <script rel="text/javascript" src="script.js"></script>
     </head>
     <body>
         <div class="game">
@@ -14,7 +13,7 @@
                 <p class="computer-score">Computer score: 0</p>
             </div>
             <div class="informations">
-                <h1>Welcome to Rock Paper Scissors!</h1>
+                <h1 class="game-header">Welcome to Rock Paper Scissors!</h1>
             </div>
             <div class="choices">
                 <div class="player">
@@ -26,10 +25,11 @@
                 </div>
             </div>
             <div class="buttons">
-                <button class="rock">Rock</button>
-                <button class="paper">Paper</button>
-                <button class="scissors">Scissors</button>
+                <button class="btn1 rock">Rock</button>
+                <button class="btn2 paper">Paper</button>
+                <button class="btn3 scissors">Scissors</button>
             </div>
         </div>
+        <script rel="text/javascript" src="script.js"></script>
     </body>
 </html>
